fixed overlapping
main div stond op 800px, de container met tiles erbij was langer dan
800px

--- a/HipperEnterprise V0.3/src/main/webapp/resources/css/style.css
+++ b/HipperEnterprise V0.3/src/main/webapp/resources/css/style.css
@@ -21,7 +21,8 @@
 }
 
 #wrapper{
-    margin-top: 30px;
+    margin-top: 30px;   
+    display: block;     
     box-shadow: 0 0 100px #888888;
     //background: #ffffff;
     //opacity: 0.5;
@@ -33,7 +34,7 @@
 }
 
 #main{
-    height: 800px;
+    height: 100%;
 }
 
 #footer {
